--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask==2.0.0
-Flask-SocketIO==5.0.3
 eventlet==0.31.0
 Flask-Login==0.5.0
+flask-restx==0.4.0
+Flask-SocketIO==5.0.3
+marshmallow==3.12.1
