--- a/ui/package.json
+++ b/ui/package.json
@@ -15,7 +15,8 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.9.1",
     "element-ui": "^2.15.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "socket.io-client": "^4.1.2"
   },
   "devDependencies": {
     "@gauseen/nuxt-proxy": "^1.0.1",
